force-app/main/default/objects/ppmail__Mail_Tracking__c.object
<CustomObject>
<fields>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Mail Trackings</relationshipLabel>
    <relationshipName>Mail_Trackings</relationshipName>
    <type>Lookup</type>
</fields>
<fields>
    <fullName>Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Banks</relationshipLabel>
    <relationshipName>Banks</relationshipName>
    <type>Lookup</type>
</fields>
</CustomObject>