force-app/main/default/objects/ppmail__Mail_Tracking__c/fields/ppmail__Account__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the Account record of the recipient. This is used to associate the tracking information with a specific account in Salesforce.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mail Trackings</relationshipLabel>
    <relationshipName>Mail_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>