force-app/main/default/objects/ppmail__Mail_Tracking__c/fields/ppmail__Campaign_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Campaign_Member_ID__c</fullName>
    <label>Campaign Member ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>