force-app/main/default/objects/ppmail__Mail_Tracking__c/fields/ppmail__Clicked__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Clicked__c</fullName>
    <description>A formula field that indicates whether a link in the email has been clicked at least once. This is determined by checking if the First Click Timestamp field has a value.</description>
    <formula>ppmail__First_Click_Timestamp__c &lt;&gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clicked</label>
    <type>Checkbox</type>
</CustomField>