force-app/main/default/objects/ppmail__Mail_Tracking__c/fields/ppmail__Contact__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the Contact record of the recipient. This is used to associate the tracking information with a specific contact in Salesforce.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mail Trackings</relationshipLabel>
    <relationshipName>Mail_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>