force-app/main/default/objects/ppmail__Mail_Tracking__c/fields/ppmail__External_Message_ID__c.field-meta.xml
<CustomField>
    <fullName>ppmail__External_Message_ID__c</fullName>
    <description>The unique identifier for the message from the external mail service provider. This is used to correlate tracking data with specific emails.</description>
    <externalId>true</externalId>
    <label>External Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>