force-app/main/default/objects/ppmail__Mail_Tracking__c/fields/ppmail__First_Opened_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>ppmail__First_Opened_Timestamp__c</fullName>
    <description>The Unix timestamp of when the first open occurred.</description>
    <label>First Opened Timestamp</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>