force-app/main/default/objects/ppmail__Mail_Tracking__c/fields/ppmail__Last_Click_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Last_Click_Timestamp__c</fullName>
    <description>The Unix timestamp of when the last click occurred.</description>
    <label>Last Click Timestamp</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>