force-app/main/default/objects/ppmail__Mail_Tracking__c/fields/ppmail__Last_Opened_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Last_Opened_Date_Time__c</fullName>
    <description>A formula field that converts the Unix timestamp from the Last_Opened_Timestamp__c field into a standard Date/Time format. This provides a human-readable timestamp for when the last open occurred.</description>
    <formula>IF(ppmail__Last_Opened_Timestamp__c &lt;&gt; 0, FROMUNIXTIME(ppmail__Last_Opened_Timestamp__c), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Opened Date/Time</label>
    <type>DateTime</type>
</CustomField>