force-app/main/default/objects/ppmail__Mail_Tracking__c/fields/ppmail__Lead__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the Lead record of the recipient. This is used to associate the tracking information with a specific lead in Salesforce.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Mail Trackings</relationshipLabel>
    <relationshipName>Mail_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>