force-app/main/default/objects/ppmail__Mail_Tracking__c/fields/ppmail__Mail_Sending_Batch__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Mail_Sending_Batch__c</fullName>
    <description>The Mail Sending Batch that this tracking record belongs to. This is a master-detail relationship, meaning that this tracking record is a child of the Mail Sending Batch record.</description>
    <label>Mail Sending Batch</label>
    <referenceTo>ppmail__Mail_Sending_Batch__c</referenceTo>
    <relationshipLabel>Mail Trackings</relationshipLabel>
    <relationshipName>Mail_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>