force-app/main/default/objects/ppmail__Mail_Tracking__c/fields/ppmail__Number_of_Clicks__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Number_of_Clicks__c</fullName>
    <description>The total number of times a link in the email has been clicked.</description>
    <label>Number of Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>