force-app/main/default/objects/ppmail__Mail_Tracking__c/fields/ppmail__Number_of_Opens__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Number_of_Opens__c</fullName>
    <description>The total number of times the email has been opened.</description>
    <label>Number of Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>