force-app/main/default/objects/ppmail__Mail_Tracking__c/fields/ppmail__Opened__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Opened__c</fullName>
    <description>A formula field that indicates whether the email has been opened at least once. This is determined by checking if the First Opened Timestamp field has a value.</description>
    <formula>ppmail__First_Opened_Timestamp__c &lt;&gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opened</label>
    <type>Checkbox</type>
</CustomField>