force-app/main/default/objects/ppmail__Mail_Tracking__c/fields/ppmail__Status__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Status__c</fullName>
    <description>The delivery status of the email.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>