force-app/main/default/objects/ppmail__Mail_Tracking__c/fields/ppmail__Status_Details__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Status_Details__c</fullName>
    <description>More details about the delivery status, such as the reason for a bounce or deferral.</description>
    <label>Status Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>