force-app/main/default/objects/ppmail__Mail_Tracking__c/fields/ppmail__User__c.field-meta.xml
<CustomField>
    <fullName>ppmail__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the User record of the recipient. This is used to associate the tracking information with a specific user in Salesforce.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mail_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>